# multidiagtools

./: .gitignore  .gitmodules  .travis.yml  .valgrindrc  CMakeLists.txt  Doxyfile  Doxyfile.bak  DoxyfileDev  INSTALL.md  LICENCE.txt  MdtConfig.cmake.in  MdtPostInstall.cmake  MdtPostInstall.cmake.in  README  README.md  TravisCiTest.cpp  appveyor.yml  asan_exec.sh  asan_suppressions.txt  build_cross_linux_to_windows.sh  config.h.in  configure.bat  configure.sh  configure_cross_linux_to_windows.sh  console-devel.bat  copyright.debian  env-mingw.bat  essais.db  gen-userman.sh  gen_debian_packages.sh  groups  install_manifest.txt  loop-test.bat  multidiagtools_0.2.3-dev.deb  multidiagtools_0.2.3-lib.deb  multidiagtools_0.2.3-tools.deb  project.config  travis.yml
cmake/: CMakeLists.txt  MdtCMakeModulesConfig.cmake.in
cmake/Modules/: FindMultidiagtools.cmake  FindQwt.cmake
cmake/caches/: DebugClang.cmake  DebugGcc.cmake  DeveloperGcc.cmake  ReleaseClang.cmake  ReleaseGcc.cmake  ReleaseMxe.cmake
cmake/modules/: FindMultidiagtools.cmake  MdtAddLibrary.cmake  MdtAddLibraryTranslations.cmake  MdtAddSqlDriverPlugin.cmake  MdtAddSqlPlugin.cmake  MdtAddTranslations.cmake  MdtCPackComponent.cmake  MdtCPackDeb.cmake  MdtCPackDebActions.cmake  MdtDependenciesUtils.cmake  MdtDependenciesUtilsActions.cmake  MdtDeployUtils.cmake  MdtGenerateEnvScript.cmake  MdtInstallCopyTargetsDependenciesScript.cmake.in  MdtInstallDirs.cmake  MdtInstallQt5.cmake  MdtQtPath.cmake  SandboxScript.cmake.in  TargetArch.cmake
icons/: CMakeLists.txt
libs/Application/: CMakeLists.txt
libs/CableList/: CMakeLists.txt
libs/DeployUtils_Core/: CMakeLists.txt
libs/Expected/: CMakeLists.txt
libs/ItemEditor/: .~lock.ActionsStates.ods#  ActionsStates.ods  CMakeLists.txt
libs/ItemModel/: CMakeLists.txt
libs/Numeric/: CMakeLists.txt
libs/PlainText_Core/: CMakeLists.txt
libs/SerialPort/: CMakeLists.txt
libs/Sql/: CMakeLists.txt
src/mdtcsv/: CMakeLists.txt  mdtCsvData.h  mdtCsvFileGenerator.cpp  mdtCsvFileGenerator.h  mdtCsvFileGeneratorFileSettingsWidget.cpp  mdtCsvFileGeneratorFileSettingsWidget.h  mdtCsvFileGeneratorFileSettingsWidget.ui  mdtCsvFileGeneratorSettingsDialog.cpp  mdtCsvFileGeneratorSettingsDialog.h  mdtCsvFileGeneratorSettingsDialog.ui  mdtCsvFileInfo.cpp  mdtCsvFileInfo.h  mdtCsvFileParser.cpp  mdtCsvFileParser.h  mdtCsvFileParserIterator.h  mdtCsvFileParserIteratorSharedData.h  mdtCsvFileParserModel.cpp  mdtCsvFileParserModel.h  mdtCsvFileParserSettingsDialog.cpp  mdtCsvFileParserSettingsDialog.h  mdtCsvFileParserSettingsDialog.ui  mdtCsvFileSettingsWidget.cpp  mdtCsvFileSettingsWidget.h  mdtCsvFileSettingsWidget.ui  mdtCsvGeneratorSettingsWidget.cpp  mdtCsvGeneratorSettingsWidget.h  mdtCsvGeneratorSettingsWidget.ui  mdtCsvParserModel.cpp  mdtCsvParserModel.h  mdtCsvParserSettingsWidget.cpp  mdtCsvParserSettingsWidget.h  mdtCsvParserTemplate.h  mdtCsvRecordFormat.cpp  mdtCsvRecordFormat.h  mdtCsvSettings.h  mdtCsvSettingsWidget.cpp  mdtCsvSettingsWidget.h  mdtCsvSettingsWidget.ui  mdtCsvSourceInfo.cpp  mdtCsvSourceInfo.h  (+14 more)
src/mdtdatabase/: CMakeLists.txt  mdtAbstractSqlCopierCodec.cpp  mdtAbstractSqlCopierCodec.h  mdtAbstractSqlTableController.cpp  mdtAbstractSqlTableController.h  mdtCsvSqlData.cpp  mdtCsvSqlData.h  mdtDataTableManager.cpp  mdtDataTableManager.h  mdtFieldMappingDialog.cpp  mdtFieldMappingDialog.h  mdtFieldMappingDialog.ui  mdtSqlApplicationWidgets.h  mdtSqlCollation.h  mdtSqlConnectionNameWidget.cpp  mdtSqlConnectionNameWidget.h  mdtSqlConnectionNameWidget.ui  mdtSqlCopierCodec.cpp  mdtSqlCopierCodec.h  mdtSqlCopierCodecSettings.h  mdtSqlCopierCodecSettingsWidget.cpp  mdtSqlCopierCodecSettingsWidget.h  mdtSqlCopierCodecSettingsWidget.ui  mdtSqlCopierCodecSqlite.cpp  mdtSqlCopierCodecSqlite.h  mdtSqlCopierDataMapping.cpp  mdtSqlCopierDataMapping.h  mdtSqlCopierFieldMapping.h  mdtSqlCopierFieldMappingDialog.cpp  mdtSqlCopierFieldMappingDialog.h  mdtSqlCopierFieldMappingDialog.ui  mdtSqlCopierSqliteDatabaseTableCodecSettings.h  mdtSqlCopierTableMapping.cpp  mdtSqlCopierTableMapping.h  mdtSqlCopierTableMappingModel.cpp  mdtSqlCopierTableMappingModel.h  mdtSqlCopierTableMappingWidget.cpp  mdtSqlCopierTableMappingWidget.h  mdtSqlCopierTableMappingWidget.ui  mdtSqlCopierTableMappingWidgetItem.cpp  (+149 more)
src/mdtdevice/: CMakeLists.txt  libmdtdevice.dbg  mdtDevice.cpp  mdtDevice.cpp.orig  mdtDevice.h  mdtDeviceContainer.cpp  mdtDeviceContainer.h  mdtDeviceContainerWidget.cpp  mdtDeviceContainerWidget.h  mdtDeviceDSO1000A.cpp  mdtDeviceDSO1000A.h  mdtDeviceIos.cpp  mdtDeviceIos.h  mdtDeviceIosSegment.cpp  mdtDeviceIosSegment.h  mdtDeviceIosWidget.cpp  mdtDeviceIosWidget.h  mdtDeviceModbus.cpp  mdtDeviceModbus.h  mdtDeviceModbusWago.cpp  mdtDeviceModbusWago.h  mdtDeviceModbusWagoModule.cpp  mdtDeviceModbusWagoModule.h  mdtDeviceModbusWagoModuleRtd.cpp  mdtDeviceModbusWagoModuleRtd.h  mdtDeviceScpi.cpp  mdtDeviceScpi.h  mdtDeviceStatusWidget.cpp  mdtDeviceStatusWidget.h  mdtDeviceU3606A.cpp  mdtDeviceU3606A.h  mdtDeviceWindow.cpp  mdtDeviceWindow.h  mdtDeviceWindow.ui  mdtMultiIoDevice.cpp  mdtMultiIoDevice.h  ui_mdtDeviceU3606AWidget.h
src/mdtport/: .mdtPortReadThread.cpp.kate-swp  CMakeLists.txt  libmdtport.dbg  mdtAbstractPort.cpp  mdtAbstractPort.h  mdtAbstractPortSetupDialog.cpp  mdtAbstractPortSetupDialog.h  mdtAbstractPortSetupDialog.ui  mdtDeviceAddress.cpp  mdtDeviceAddress.h  mdtDeviceInfo.cpp  mdtDeviceInfo.h  mdtModbusHwNodeId.h  mdtModbusTcpPortManager.cpp  mdtModbusTcpPortManager.h  mdtModbusTcpPortManager.html  mdtModbusTcpPortSetupDialog.cpp  mdtModbusTcpPortSetupDialog.h  mdtPort.cpp.bak  mdtPort.h  mdtPort.h.bak  mdtPortConfig.cpp  mdtPortConfig.h  mdtPortConfigWidget.cpp  mdtPortConfigWidget.h  mdtPortConfigWidget.ui  mdtPortInfo.cpp  mdtPortInfo.h  mdtPortInfoCbHandler.cpp  mdtPortInfoCbHandler.h  mdtPortManager.cpp  mdtPortManager.h  mdtPortManagerStateMachine.cpp  mdtPortManagerStateMachine.h  mdtPortReadThread.cpp  mdtPortReadThread.h  mdtPortStatusWidget.cpp  mdtPortStatusWidget.h  mdtPortThread.cpp  (+67 more)
tests/: CMakeLists.txt  Makefile
tools/: CMakeLists.txt
(+14008 files in other folders)
